--- a/calc.html
+++ b/calc.html
@@ -4,66 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="./calc.css">
      <script src="calc.js" defer></script>
 </head>
 <body>
-    <style>
-        body{
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 120vh;
-            
-        }
-        #calculator{
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: rgb(225, 225, 225);
-            border-radius: 10px;
-            max-width: 500px;
-            overflow: hidden;
-        }
-        #display{
-            width: 491px;
-            padding: 20px;
-            font-size: 5rem;
-            text-align: left;
-            border: none;
-             background-color: #ababab;
-             color: #2c2c2c;
-        }
-        #buttons{
-            display: grid;
-            grid-template-columns: repeat(4,1fr);
-            gap: 10px;
-            padding: 15px;
-        }
-        button{
-            width: 100px;
-            height: 100px;
-            border-radius: 30px;
-            padding-top: 3px;
-            background-color: rgb(234, 126, 32);
-            font-size: 2.5rem;
-            font-weight: bold;
-            
-        }
-        button:hover{
-            background-color: rgb(234, 126, 32 ,40%);
-        }
-        button:active{
-            background-color: rgb(234, 126, 32 ,30%);
-        }
-        .operator-bt{
-            background-color: hsl(180, 69%, 45%);
-        }
-        .operator-bt:hover{
-            background-color: hsl(180, 69%, 55%);
-        }
-        .operator-bt:active{
-            background-color: hsl(180, 69%, 65%);
-        }
-    </style>
     <div id="calculator">
         <input type="text" id="display" readonly>
         <div id="buttons">
